--- a/devops/helm-chart/platform/templates/serviceaccount.yaml
+++ b/devops/helm-chart/platform/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "helloworld-chart.serviceAccountName" . }}
+  name: {{ include "__service_name__.serviceAccountName" . }}
   labels:
-    {{- include "helloworld-chart.labels" . | nindent 4 }}
+    {{- include "__service_name__.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
