--- a/devops/helm-chart/platform/templates/service.yaml
+++ b/devops/helm-chart/platform/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helloworld-chart.fullname" . }}
+  name: {{ include "__service_name__.fullname" . }}
   labels:
     {{- include "__service_name__.labels" . | nindent 4 }}
 spec:
