--- a/devops/helm-chart/platform/templates/service.yaml
+++ b/devops/helm-chart/platform/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "__service_name__.fullname" . }}
+  name: {{ include "platform.fullname" . }}
   labels:
-    {{- include "__service_name__.labels" . | nindent 4 }}
+    {{- include "platform.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "__service_name__.selectorLabels" . | nindent 4 }}
+    {{- include "platform.selectorLabels" . | nindent 4 }}
