--- a/devops/helm-chart/platform/templates/tests/test-connection.yaml
+++ b/devops/helm-chart/platform/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "helloworld-chart.fullname" . }}-test-connection"
+  name: "{{ include "platform.fullname" . }}-test-connection"
   labels:
-    {{- include "helloworld-chart.labels" . | nindent 4 }}
+    {{- include "platform.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "helloworld-chart.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "platform.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
