--- a/devops/helm-chart/platform/values.yaml
+++ b/devops/helm-chart/platform/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: __registryhost__
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "__chart_version__"
 
 imagePullSecrets: []
 nameOverride: ""
