--- a/devops/helm-chart/platform/templates/deployment.yaml
+++ b/devops/helm-chart/platform/templates/deployment.yaml
@@ -1,61 +1,44 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ include "platform.fullname" . }}
-  labels:
-    {{- include "platform.labels" . | nindent 4 }}
-spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
-  selector:
-    matchLabels:
-      {{- include "platform.selectorLabels" . | nindent 6 }}
-  template:
-    metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      labels:
-        {{- include "platform.selectorLabels" . | nindent 8 }}
-    spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      serviceAccountName: {{ include "platform.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 80
-              protocol: TCP
+---
+apiVersion: v1
+kind: List
+items:
+- apiVersion: extensions/v1beta1
+  kind: Deployment
+  metadata:
+    labels:
+      app: {{ template "fullname" . }}
+      chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+      release: {{ .Release.Name | quote }}
+      heritage: {{ .Release.Service | quote }}
+      version: {{ .Chart.Version }}
+    name: __service_name__
+  spec:
+    replicas: 1
+    selector:
+      matchLabels:
+        app: {{ template "fullname" . }}
+    template:
+      metadata:
+        labels:
+          provider: fabric8
+          app: {{ template "fullname" . }}
+          chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+          release: {{ .Release.Name | quote }}
+          heritage: {{ .Release.Service | quote }}
+          version: 1.0.0
+      spec:
+        containers:
+        - image: "{{ .Values.__service_name__.image.name }}:{{ .Values.__service_name__.image.tag }}"
+          imagePullPolicy: {{ .Values.__service_name__.image.pullPolicy }}
           livenessProbe:
-            httpGet:
-              path: /
-              port: http
+            initialDelaySeconds: 60
+            tcpSocket:
+              port: 80
+          name: __service_name__
           readinessProbe:
             httpGet:
               path: /
-              port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+              port: 80
+            initialDelaySeconds: 5
+          securityContext:
+            privileged: false
