--- a/devops/helm-chart/platform/values.yaml
+++ b/devops/helm-chart/platform/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: __registryhost__
+  repository: __image_name__
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "__chart_version__"
